Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Public/Generate/Export/USkeletalMeshComponent.h

	DOTNET_EXPORT auto E_PROP_USkeletalMeshComponent_AreaStiffness_GET(USkeletalMeshComponent* Ptr) { return Ptr->AreaStiffness; }
	DOTNET_EXPORT void E_PROP_USkeletalMeshComponent_AreaStiffness_SET(USkeletalMeshComponent* Ptr, float Value) { Ptr->AreaStiffness = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkeletalMeshComponent_bAnimTreeInitialised_GET(USkeletalMeshComponent* Ptr) { return Ptr->bAnimTreeInitialised; }
	DOTNET_EXPORT void E_PROP_USkeletalMeshComponent_bAnimTreeInitialised_SET(USkeletalMeshComponent* Ptr, uint8 Value) { Ptr->bAnimTreeInitialised = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkeletalMeshComponent_bBlendPhysics_GET(USkeletalMeshComponent* Ptr) { return Ptr->bBlendPhysics; }
	DOTNET_EXPORT void E_PROP_USkeletalMeshComponent_bBlendPhysics_SET(USkeletalMeshComponent* Ptr, uint8 Value) { Ptr->bBlendPhysics = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkeletalMeshComponent_bCollideWithAttachedChildren_GET(USkeletalMeshComponent* Ptr) { return Ptr->bCollideWithAttachedChildren; }
	DOTNET_EXPORT void E_PROP_USkeletalMeshComponent_bCollideWithAttachedChildren_SET(USkeletalMeshComponent* Ptr, uint8 Value) { Ptr->bCollideWithAttachedChildren = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkeletalMeshComponent_bCollideWithEnvironment_GET(USkeletalMeshComponent* Ptr) { return Ptr->bCollideWithEnvironment; }
	DOTNET_EXPORT void E_PROP_USkeletalMeshComponent_bCollideWithEnvironment_SET(USkeletalMeshComponent* Ptr, uint8 Value) { Ptr->bCollideWithEnvironment = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkeletalMeshComponent_bDeferKinematicBoneUpdate_GET(USkeletalMeshComponent* Ptr) { return Ptr->bDeferKinematicBoneUpdate; }
	DOTNET_EXPORT void E_PROP_USkeletalMeshComponent_bDeferKinematicBoneUpdate_SET(USkeletalMeshComponent* Ptr, uint8 Value) { Ptr->bDeferKinematicBoneUpdate = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkeletalMeshComponent_bDeferredKinematicUpdate_GET(USkeletalMeshComponent* Ptr) { return Ptr->bDeferredKinematicUpdate; }
	DOTNET_EXPORT void E_PROP_USkeletalMeshComponent_bDeferredKinematicUpdate_SET(USkeletalMeshComponent* Ptr, uint8 Value) { Ptr->bDeferredKinematicUpdate = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkeletalMeshComponent_bDisableClothSimulation_GET(USkeletalMeshComponent* Ptr) { return Ptr->bDisableClothSimulation; }
	DOTNET_EXPORT void E_PROP_USkeletalMeshComponent_bDisableClothSimulation_SET(USkeletalMeshComponent* Ptr, uint8 Value) { Ptr->bDisableClothSimulation = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkeletalMeshComponent_bEnableLineCheckWithBounds_GET(USkeletalMeshComponent* Ptr) { return Ptr->bEnableLineCheckWithBounds; }
	DOTNET_EXPORT void E_PROP_USkeletalMeshComponent_bEnableLineCheckWithBounds_SET(USkeletalMeshComponent* Ptr, uint8 Value) { Ptr->bEnableLineCheckWithBounds = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkeletalMeshComponent_bEnablePerPolyCollision_GET(USkeletalMeshComponent* Ptr) { return Ptr->bEnablePerPolyCollision; }
	DOTNET_EXPORT void E_PROP_USkeletalMeshComponent_bEnablePerPolyCollision_SET(USkeletalMeshComponent* Ptr, uint8 Value) { Ptr->bEnablePerPolyCollision = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkeletalMeshComponent_bEnablePhysicsOnDedicatedServer_GET(USkeletalMeshComponent* Ptr) { return Ptr->bEnablePhysicsOnDedicatedServer; }
	DOTNET_EXPORT void E_PROP_USkeletalMeshComponent_bEnablePhysicsOnDedicatedServer_SET(USkeletalMeshComponent* Ptr, uint8 Value) { Ptr->bEnablePhysicsOnDedicatedServer = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkeletalMeshComponent_BendingStiffness_GET(USkeletalMeshComponent* Ptr) { return Ptr->BendingStiffness; }
	DOTNET_EXPORT void E_PROP_USkeletalMeshComponent_BendingStiffness_SET(USkeletalMeshComponent* Ptr, float Value) { Ptr->BendingStiffness = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkeletalMeshComponent_bForceRefpose_GET(USkeletalMeshComponent* Ptr) { return Ptr->bForceRefpose; }
	DOTNET_EXPORT void E_PROP_USkeletalMeshComponent_bForceRefpose_SET(USkeletalMeshComponent* Ptr, uint8 Value) { Ptr->bForceRefpose = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkeletalMeshComponent_bHasValidBodies_GET(USkeletalMeshComponent* Ptr) { return Ptr->bHasValidBodies; }
	DOTNET_EXPORT void E_PROP_USkeletalMeshComponent_bHasValidBodies_SET(USkeletalMeshComponent* Ptr, uint8 Value) { Ptr->bHasValidBodies = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkeletalMeshComponent_bIncludeComponentLocationIntoBounds_GET(USkeletalMeshComponent* Ptr) { return Ptr->bIncludeComponentLocationIntoBounds; }
	DOTNET_EXPORT void E_PROP_USkeletalMeshComponent_bIncludeComponentLocationIntoBounds_SET(USkeletalMeshComponent* Ptr, uint8 Value) { Ptr->bIncludeComponentLocationIntoBounds = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkeletalMeshComponent_bIsAutonomousTickPose_GET(USkeletalMeshComponent* Ptr) { return Ptr->bIsAutonomousTickPose; }
	DOTNET_EXPORT void E_PROP_USkeletalMeshComponent_bIsAutonomousTickPose_SET(USkeletalMeshComponent* Ptr, uint8 Value) { Ptr->bIsAutonomousTickPose = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkeletalMeshComponent_bLocalSpaceKinematics_GET(USkeletalMeshComponent* Ptr) { return Ptr->bLocalSpaceKinematics; }
	DOTNET_EXPORT void E_PROP_USkeletalMeshComponent_bLocalSpaceKinematics_SET(USkeletalMeshComponent* Ptr, uint8 Value) { Ptr->bLocalSpaceKinematics = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkeletalMeshComponent_bLocalSpaceSimulation_GET(USkeletalMeshComponent* Ptr) { return Ptr->bLocalSpaceSimulation; }
	DOTNET_EXPORT void E_PROP_USkeletalMeshComponent_bLocalSpaceSimulation_SET(USkeletalMeshComponent* Ptr, uint8 Value) { Ptr->bLocalSpaceSimulation = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkeletalMeshComponent_bNoSkeletonUpdate_GET(USkeletalMeshComponent* Ptr) { return Ptr->bNoSkeletonUpdate; }
	DOTNET_EXPORT void E_PROP_USkeletalMeshComponent_bNoSkeletonUpdate_SET(USkeletalMeshComponent* Ptr, uint8 Value) { Ptr->bNoSkeletonUpdate = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkeletalMeshComponent_bOldForceRefPose_GET(USkeletalMeshComponent* Ptr) { return Ptr->bOldForceRefPose; }
	DOTNET_EXPORT void E_PROP_USkeletalMeshComponent_bOldForceRefPose_SET(USkeletalMeshComponent* Ptr, uint8 Value) { Ptr->bOldForceRefPose = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkeletalMeshComponent_BoneSpaceTransforms_GET(USkeletalMeshComponent* Ptr) { return ConvertToManage_TemplatePointerDescription(Ptr->BoneSpaceTransforms); }
	DOTNET_EXPORT void E_PROP_USkeletalMeshComponent_BoneSpaceTransforms_SET(USkeletalMeshComponent* Ptr, INT_PTR Value) { Ptr->BoneSpaceTransforms = *(TArray<FTransform>*)Value; }
	
	DOTNET_EXPORT auto E_PROP_USkeletalMeshComponent_bOnlyAllowAutonomousTickPose_GET(USkeletalMeshComponent* Ptr) { return Ptr->bOnlyAllowAutonomousTickPose; }
	DOTNET_EXPORT void E_PROP_USkeletalMeshComponent_bOnlyAllowAutonomousTickPose_SET(USkeletalMeshComponent* Ptr, uint8 Value) { Ptr->bOnlyAllowAutonomousTickPose = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkeletalMeshComponent_bPauseAnims_GET(USkeletalMeshComponent* Ptr) { return Ptr->bPauseAnims; }
	DOTNET_EXPORT void E_PROP_USkeletalMeshComponent_bPauseAnims_SET(USkeletalMeshComponent* Ptr, uint8 Value) { Ptr->bPauseAnims = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkeletalMeshComponent_bPrevDisableClothSimulation_GET(USkeletalMeshComponent* Ptr) { return Ptr->bPrevDisableClothSimulation; }
	DOTNET_EXPORT void E_PROP_USkeletalMeshComponent_bPrevDisableClothSimulation_SET(USkeletalMeshComponent* Ptr, uint8 Value) { Ptr->bPrevDisableClothSimulation = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkeletalMeshComponent_bPropagateCurvesToSlaves_GET(USkeletalMeshComponent* Ptr) { return Ptr->bPropagateCurvesToSlaves; }
	DOTNET_EXPORT void E_PROP_USkeletalMeshComponent_bPropagateCurvesToSlaves_SET(USkeletalMeshComponent* Ptr, uint8 Value) { Ptr->bPropagateCurvesToSlaves = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkeletalMeshComponent_bRequiredBonesUpToDate_GET(USkeletalMeshComponent* Ptr) { return Ptr->bRequiredBonesUpToDate; }
	DOTNET_EXPORT void E_PROP_USkeletalMeshComponent_bRequiredBonesUpToDate_SET(USkeletalMeshComponent* Ptr, uint8 Value) { Ptr->bRequiredBonesUpToDate = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkeletalMeshComponent_bResetAfterTeleport_GET(USkeletalMeshComponent* Ptr) { return Ptr->bResetAfterTeleport; }
	DOTNET_EXPORT void E_PROP_USkeletalMeshComponent_bResetAfterTeleport_SET(USkeletalMeshComponent* Ptr, uint8 Value) { Ptr->bResetAfterTeleport = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkeletalMeshComponent_bShowPrePhysBones_GET(USkeletalMeshComponent* Ptr) { return Ptr->bShowPrePhysBones; }
	DOTNET_EXPORT void E_PROP_USkeletalMeshComponent_bShowPrePhysBones_SET(USkeletalMeshComponent* Ptr, uint8 Value) { Ptr->bShowPrePhysBones = Value; }
	
	
	DOTNET_EXPORT INT_PTR E_NewObject_USkeletalMeshComponent(UObject* Parent, char* Name)
	{
		return (INT_PTR)NewObject<USkeletalMeshComponent>(Parent, FName(UTF8_TO_TCHAR(Name)));
	}